# nano-vllm

./: .gitignore  CLAUDE.md  MIXTRAL_OPTIMIZATION_GUIDE.md  README.md  bench.py  chat.py  dev-plan.md  example.py  example_mixtral.py  nano-vllm代码文档.md  pyproject.toml
envs/2080ti/: main.py  pyproject.toml  run_test.py
nanovllm/engine/: expert_manager.py  model_runner.py  svd_expert_manager.py
nanovllm/layers/: attention.py  attention_legacy.py  attention_optimized.py  moe.py
nanovllm/models/: mixtral.md  mixtral.py
nanovllm/utils/: context.py  loader.py  moe_calib.py
scripts/: collect_moe_calib.py  debug.py  decompose_experts.py  distill_experts_activation_aware.py  test_attention_perf.py  test_expert_loading.py  test_expert_manager.py  test_mixtral_loader.py  test_mixtral_model.py  test_mixtral_runner.py  verify_mixtral_format.py
